[tool.poetry]
name = "flashysarcasticgoals"
version = "0.1.0"
description = ""
authors = ["Thomas Lynch <dftvia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^2.0.0"
pytz = "^2020.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
